--- a/_config.yml
+++ b/_config.yml
@@ -136,14 +136,32 @@ related_blog_posts:
 # Giscus comments (RECOMMENDED)
 # Follow instructions on https://giscus.app/ to setup for your repo to fill out
 # the information below.
+# <script src="https://giscus.app/client.js"
+#         data-repo="Team-Full-Stack/teamfullstack"
+#         data-repo-id="R_kgDOK1xQig"
+#         data-category="General"
+#         data-category-id="DIC_kwDOK1xQis4CbmOu"
+#         data-mapping="title"
+#         data-strict="1"
+#         data-reactions-enabled="1"
+#         data-emit-metadata="0"
+#         data-input-position="top"
+#         data-theme="preferred_color_scheme"
+#         data-lang="en"
+#         data-loading="lazy"
+#         crossorigin="anonymous"
+#         async>
+# </script>
 giscus:
-  repo:                          # <your-github-user-name>/<your-github-repo-name>
-  category: Comments             # name of the category under which discussions will be created
-  mapping: title                 # identify discussions by post title
-  strict: 1                      # use strict identification mode
-  reactions_enabled: 1           # enable (1) or disable (0) emoji reactions
-  input_position: bottom         # whether to display input form below (bottom) or above (top) the comments
-  theme: preferred_color_scheme  # name of the color scheme (preferred works well with al-folio light/dark mode)
+  repo: Team-Full-Stack/teamfullstack # <your-github-user-name>/<your-github-repo-name>
+  repo_id: R_kgDOK1xQig               # repository id
+  category: General                   # name of the category under which discussions will be created
+  category_id: DIC_kwDOK1xQis4CbmOu   # category id
+  mapping: title                      # identify discussions by post title
+  strict: 1                           # use strict identification mode
+  reactions_enabled: 1                # enable (1) or disable (0) emoji reactions
+  input_position: top                 # whether to display input form below (bottom) or above (top) the comments
+  theme: preferred_color_scheme       # name of the color scheme (preferred works well with al-folio light/dark mode)
   emit_metadata: 0
   lang: en
 
